@@ -1,5 +1,6 @@
 pgcenter (devel) unstable; urgency=low
 
+  * allow to use connection settings from libpq env vars.
   * add install-man section into Makefile.
   * fix torn multiline records in log tail.
   * use qsort_r() instead of hand-made sorting.
